--- a/crud-php-complete-master (2)/crud-php-complete-master/add.html
+++ b/crud-php-complete-master (2)/crud-php-complete-master/add.html
@@ -1,32 +1,40 @@
 <html>
 <head>
-	<title>Add Data</title>
+    <title>Agregar proyectos</title>
 </head>
 
 <body>
-	<a href="index.php">Home</a> | <a href="view.php">View Products</a> | <a href="logout.php">Logout</a>
-	<br/><br/>
+    <a href="index.php">Inicio</a> | <a href="view.php">Ver Proyectos</a> | <a href="logout.php">Salir</a>
+    <br/><br/>
 
-	<form action="add.php" method="post" name="form1">
-		<table width="25%" border="0">
-			<tr> 
-				<td>Name</td>
-				<td><input type="text" name="name"></td>
-			</tr>
-			<tr> 
-				<td>Quantity</td>
-				<td><input type="text" name="qty"></td>
-			</tr>
-			<tr> 
-				<td>Price</td>
-				<td><input type="text" name="price"></td>
-			</tr>
-			<tr> 
-				<td></td>
-				<td><input type="submit" name="Submit" value="Add"></td>
-			</tr>
-		</table>
-	</form>
+    <form action="add.php" method="post" name="form1" enctype="multipart/form-data">
+        <table width="25%" border="0">
+            <tr> 
+                <td>Imagen</td>
+                <td><input type="file" name="Imagen"></td>
+            </tr>
+            <tr> 
+                <td>Nombre del proyecto</td>
+                <td><input type="text" name="NombreProyecto"></td>
+            </tr>
+            <tr> 
+                <td>Descripción</td>
+                <td><input type="text" name="Descripcion"></td>
+            </tr>
+            <tr> 
+                <td>Departamento</td>
+                <td><input type="text" name="Departamento"></td>
+            </tr>
+            <tr> 
+                <td>Fecha</td>
+                <td><input type="date" name="Fecha"></td>
+            </tr>
+            <tr> 
+                <td></td>
+                <td><input type="submit" name="Submit" value="Agregar"></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
 
